[package]
name = "proc-diag"
version = "0.1.0"
authors = ["Jacob Pratt <jacob@jhpratt.dev>"]
edition = "2024"
rust-version = "1.85.0"
repository = "https://github.com/jhpratt/proc-diag"
keywords = ["proc", "macro", "diagnostic"]
categories = ["development-tools::procedural-macro-helpers", "rust-patterns"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
proc-macro2 = "1.0.95"
