[package]
name = "proc-diag"
version = "0.2.0"
authors = ["Jacob Pratt <jacob@jhpratt.dev>"]
edition = "2021"
rust-version = "1.78.0"
repository = "https://github.com/jhpratt/proc-diag"
keywords = ["proc", "macro", "diagnostic"]
categories = ["development-tools::procedural-macro-helpers", "rust-patterns"]
description = "Leverage compiler-provided functionality to emit custom error messages in procedural macros."
readme = "README.md"
license = "MIT OR Apache-2.0"
include = ["src/**/*", "LICENSE-*", "README.md"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

[dependencies]
proc-macro2 = { version = "1.0.95", optional = true }
quote = { version = "1.0.40", optional = true }

[features]
msrv-1-78 = []
proc-macro2 = ["dep:proc-macro2"]
quote = ["dep:quote", "proc-macro2"]
